# smart-invoice-reminder-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  package.json
.claude/commands/: commit-and-push.md  commit.md  create-pr.md
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit  pre-push
apps/api/: .env.example  CLAUDE.md  pyproject.toml
apps/api/src/app/: config.py  dependencies.py  main.py
apps/api/src/app/db/: client.py
apps/api/src/app/db/queries/: clients.py  invoices.py
apps/api/src/app/models/: client.py  invoice.py  reminder.py  risk.py
apps/api/src/app/routers/: auth.py  clients.py  invoices.py  reminders.py  risk.py
apps/api/src/app/services/: invoice_service.py  nl2sql_service.py  reminder_service.py  risk_service.py
apps/api/src/app/workers/: celery_app.py  check_overdue.py  send_reminder.py
apps/web/: .gitignore  CLAUDE.md  biome.json  index.html  knip.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
apps/web/src/lib/: api.ts  constants.ts  format.ts
apps/web/src/pages/: client-detail.tsx  clients.tsx  dashboard.tsx  invoice-detail.tsx  invoices.tsx  login.tsx  reminders.tsx
apps/web/src/queries/: use-clients.ts  use-invoices.ts  (+2 more)
docs/sds/: system-architecture.md
infra/: docker-compose.dev.yml  docker-compose.yml
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/nginx/: smart-invoice.conf
scripts/: dev.sh  seed.sh  setup.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 20260216000000_initial_schema.sql
(+8 files in other folders)
